@@ -58,6 +58,9 @@ Damien Radtke and Matthew Gilbert for contributing to this release
  MiscUtilities.getFileParent(String path)
  MiscUtilities.getFileProtocol(String url)
  MiscUtilities.moveFile(File source, File dest)
+ MiscUtilities.compareVersions(String v1, String v2)
+ MiscUtilities.quicksort(Object[] obj, Comparator compare)
+ MiscUtilities.quicksort(List list, Comparator compare)
  MiscUtilities.copyStream(int bufferSize, ProgressObserver progress, InputStream in, OutputStream out, boolean canStop)
  MiscUtilities.copyStream(ProgressObserver progress, InputStream in, OutputStream out, boolean canStop)
  MiscUtilities.isBinary(Reader reader)
